Footer and header

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,1 +1,18 @@
 {% extends 'base.html' %}
+
+{% block content %}
+<section style="margin: 2em;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 text-center">
+                <div class="card">
+                    <h1 style="font-size: 40px; font-weight: bold;">
+                        8
+                    </h1>
+                    <p style="font-size: 18px;"><i class="fas fa-users"></i> Bands</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock content %}
