--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,5 +15,5 @@
 </section>
 <footer id="footer">
     <p>Copyright &copy; 2022 </p>
-    <p>Made with  by <a href="https://www.linkedin.com/in/kevin-okome-53169774/">Kevin Okome</a></p>
+    <p>Made with <i class="fas fa-heart"></i> by <a href="https://www.linkedin.com/in/kevin-okome-53169774/">Kevin Okome</a></p>
 </footer>
