--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,7 +14,7 @@ body{
     list-style: none;
 }
 .contact-area {
-    border-bottom: 1px solid #353C46;
+    /*border-bottom: 1px solid #353C46;*/
 }
 
 .contact-content p {
@@ -66,7 +66,7 @@ body{
 }
 
 .contact-social ul li a:hover {
-    border: 1px solid #FAB702;
+    /*border: 1px solid #FAB702;*/
     color: #FAB702;
 }
 
@@ -95,6 +95,8 @@ body{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border: transparent;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .card:hover {
