--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,19 @@
     <script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <style>
+      .card {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        border: transparent;
+        padding-top: 1em;
+        padding-bottom: 1em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+      }
+
+      .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+      }
     </style>
   </head>
   <body>
