--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,17 +1,97 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<style>
+    .card-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+</style>
 <section style="margin: 2em;">
-    <div class="container">
+    <div class="container" style="margin-top:2em; margin-bottom:2em;">
         <div class="row">
-            <div class="col-md-3 text-center">
+            <div class="col-md-12 text-center">
+                <h3>The view here represents a summary of the main models and distinct count of items/rows within their distinctive schema.</h3>
+            </div>
+        </div>
+        <div class="row card-container" style="margin-bottom:2em;">
+            <div class="col-md-4 text-center">
                 <div class="card">
-                    <h1 style="font-size: 40px; font-weight: bold;">
-                        8
+                    <h1 style="font-size: 48px; font-weight: bold;">
+                        {{band_count}}
                     </h1>
-                    <p style="font-size: 18px;"><i class="fas fa-users"></i> Bands</p>
+                    <p style="font-size: 15px;">Bands</p>
                 </div>
             </div>
+            <div class="col-md-4 text-center">
+                <div class="card">
+                    <h1 style="font-size: 48px; font-weight: bold;">
+                        {{band_member_count}}
+                    </h1>
+                    <p style="font-size: 15px;">Band Members</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="card">
+                    <h1 style="font-size: 48px; font-weight: bold;">
+                        {{album_categories_count}}
+                    </h1>
+                    <p style="font-size: 15px;">Album Categories</p>
+                </div>
+            </div>
+        </div>
+        <div class="row card-container" style="margin-bottom:2em;">
+            <div class="col-md-4 text-center">
+                <div class="card">
+                    <h1 style="font-size: 48px; font-weight: bold;">
+                        {{band_album_count}}
+                    </h1>
+                    <p style="font-size: 15px;">Albums</p>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="card">
+                    <h1 style="font-size: 48px; font-weight: bold;">
+                        {{tracks_count}}
+                    </h1>
+                    <p style="font-size: 15px;">Tracks</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h5>
+                    <u>
+                        Table View showing Album Category Count Summary
+                    </u>
+                </h5>
+            </div>
+        </div>
+        <div class="row">
+            <table class="table table-dark table-striped center">
+                <thead>
+                  <tr>
+                    <th>Album Category Name</th>
+                    <th>Album Count</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    {% if album_distro %}
+                    {% for i in album_distro %}
+                      <tr>
+                        <td>{{i.category_name}}</td>
+                        <td>{{i.count_albums}}</td>
+                      </tr>
+                    {% endfor %}
+                    {% endif %}
+                </tbody>
+            </table>
         </div>
     </div>
 </section>
